--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -17,7 +17,7 @@ alipay:              "支付宝"
 
 post:
   continue_reading:  "阅读全文…"
-  last_updated:      "最后更新时间："
+  last_updated:      "最后更新："
   prev:              "上一篇"
   next:              "下一篇"
   reward:            "￥"
