Adjust and optimize the sidebar menu

--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -9,7 +9,7 @@ menu:
   home:              "主页"
   archives:          "归档"
   tags:              "标签"
-  th-list:           "分类"
+  th-list:           "文章分类"
   user:              "关于"
 
 wechat:              "微信"
